web/book/tests/examples/snapshots/examples__book__syntax__tuples__1.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nselect {first_name}\n"
---
SELECT
  first_name
FROM
  employees

